<resources>
    <string name="app_name">StyleOmega</string>
    <string name="txt_user">Username</string>
    <string name="txt_pass">Password</string>
    <string name="btn_login">Log in</string>
    <string name="link_reg">Not a member? Register here</string>
    <string name="txt_lname">Last name</string>
    <string name="btn_register">Register</string>
    <string name="btn_update">Update</string>
    <string name="txt_fname">First name</string>
    <string name="txt_contact_number">Contact number</string>
    <string name="txt_email">Email</string>
    <string name="link_buy">Buy items</string>
    <string name="link_addToCart">Add to cart</string>
    <string name="link_Checkout">Checkout</string>
    <string name="likn_search">Search</string>
    <string name="link_contact">Contact Store</string>
    <string name="link_share">Share</string>
    <string name="link_search">Search</string>
    <string name="welcome_msg">Welcome to StyleOmega!!!!!!</string>
    <string name="error_password">incorrect password</string>
    <string name="already_member">Already a member? Log in</string>
    <string name="hint_password">EditPassword</string>
    <string name="hint_username">EditUsername</string>
    <string name="message">We warmly welcome you to our online clothing store..
          go to the link below to manage your account info... :)
    </string>
    <string name="link_manageAccount"> Manage Account Information </string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_display_catagories">DisplayCatagories</string>
</resources>
