<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextHint"
    tools:context="com.example.imoshikasewwandi.styleomegaassignment.UpdateProfileActivity">

    <EditText
        android:id="@+id/updateFirstName"
        android:layout_width="341dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="34dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/txt_fname"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateLastName"
        android:layout_width="343dp"
        android:layout_height="43dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/txt_lname"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateFirstName" />

    <EditText
        android:id="@+id/updateUsername"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/txt_user"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateLastName" />

    <EditText
        android:id="@+id/updatePassword"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/txt_pass"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateUsername" />

    <EditText
        android:id="@+id/updateContact"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/txt_contact_number"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEmail" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_update"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateContact"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/updateEmail"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePassword" />


</android.support.constraint.ConstraintLayout>
